--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
   "author": "ecxtacy",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -30,6 +33,10 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0"
   }
 }
