--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
