feat(script): add script to run database in docker
Run `tools/run_postgres_docker.sh` to start postgres in docker.
Update `.env.example` with example URL string for database.
Add command `db:docker` to `package.json` to run db in docker.

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,4 +3,4 @@
 SERVER_PORT=
 
 # postgres database URL string
-DATABASE_URL=
+DATABASE_URL="postgresql://postgres:pass@localhost:5432/pulse_keeper_db"
