--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "@ecxtacy/pulse-keeper-common": "^1.1.5",
     "@prisma/client": "^5.12.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
