--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
     "@ecxtacy/pulse-keeper-common": "^1.1.5",
     "@prisma/client": "^5.12.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "zod": "^3.22.4"
   }
