--- a/common/package.json
+++ b/common/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@ecxtacy/pulse-keeper-common",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Common packages required by server and client for pulse-keeper",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b",
+    "publish": "npm publish"
   },
   "keywords": [],
   "author": "",
