--- a/common/package.json
+++ b/common/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@ecxtacy/pulse-keeper-common",
-  "version": "1.1.6",
+  "version": "2.0.1",
   "description": "Common packages required by server and client for pulse-keeper",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -b",
-    "publish": "npm publish"
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
