dev: development mode edit
`.env` file with `NODE_ENV` variable, set to
production or development accordingly.

Auth middleware calls `next()` if in development
mode.

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,6 @@ SERVER_PORT=
 
 # postgres database URL string
 DATABASE_URL="postgresql://postgres:pass@localhost:5432/pulse_keeper_db"
+
+# node environment
+NODE_ENV=development
