--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "14.2.3"
   },
   "dependencies": {
     "@ecxtacy/pulse-keeper-common": "^2.4.0",
@@ -45,6 +50,9 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.3"
   }
 }
