--- a/client/package.json
+++ b/client/package.json
@@ -8,5 +8,31 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ./*"
+  },
+  "dependencies": {
+    "zod": "^3.22.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.3",
+    "@ecxtacy/pulse-keeper-common": "^2.4.0"
+  },
+  "devDependencies": {
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "14.2.3",
+    "prettier": "3.2.5",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
