fix: Isolate server packages into server directory.
Server package will remain in server directory only, not
in the common mono-repo. This is because deployment will be
easy as of now.

Refactor backend code to return correct reponses.

--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --ext ts",
     "lint:fix": "eslint . --fix --ext ts",
     "format": "prettier --write src/*",
-    "db:docker": "bash ../tools/run_postgres_docker.sh"
+    "db:docker": "bash ../tools/run_postgres_docker.sh",
+    "db:studio": "npx prisma studio"
   },
   "author": "ecxtacy",
   "license": "Apache-2.0"
