--- a/client/package.json
+++ b/client/package.json
@@ -10,29 +10,32 @@
     "format": "prettier --write ./*"
   },
   "dependencies": {
-    "zod": "^3.22.4",
+    "@ecxtacy/pulse-keeper-common": "^2.4.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3",
-    "@ecxtacy/pulse-keeper-common": "^2.4.0"
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.4",
+    "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint-config-next": "14.2.3",
-    "prettier": "3.2.5",
-    "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "postcss": "^8",
+    "prettier": "3.2.5",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.4"
   }
 }
